# Ascension

./: .docignore  .env.example  .gitignore  .gitmessage  .gitmodules  .prototools  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.prod.yml  docker-compose.yml  justfile  moon.yml  package.json
.squad/: team.md  (+2 more)
apps/ai/: .dockerignore  .gitignore  Dockerfile  biomechanics.json  consumer.py  environment.yml  main.py  mediapipe.py  moon.yml  pose_analysis.py  pose_analysis_backup.py  pose_analysis_v2.py  pyproject.toml  requirements.txt
apps/ai/example/: example-2-biomechanics.json  example-biomechanics.json
apps/ai/requirements/: app.txt  base.txt  detectron2.txt  dev.txt  moge.txt  torch.txt
apps/ai/scripts/: download-model.sh
apps/ai/src/: ai_mediapipe.py  ai_sam3d.py  consumer.py  pose_analysis.py  pose_analysis_backup.py  worker.py
apps/ai/src/sam_3d_body/: build_models.py  sam_3d_body_estimator.py
apps/ai/src/sam_3d_body/data/transforms/: __init__.py  bbox_utils.py  common.py
apps/ai/src/sam_3d_body/data/utils/: io.py
apps/ai/src/sam_3d_body/metadata/: mhr70.py
apps/ai/src/sam_3d_body/models/backbones/: dinov3.py  vit.py
apps/ai/src/sam_3d_body/models/decoders/: __init__.py  keypoint_prompt_sampler.py  prompt_encoder.py  promptable_decoder.py
apps/ai/src/sam_3d_body/utils/: __init__.py  checkpoint.py  dist.py
apps/ai/src/sam_3d_body/visualization/: renderer.py  skeleton_visualizer.py  utils.py
apps/ai/src/tools/: build_detector.py  build_fov_estimator.py  build_sam.py  cascade_mask_rcnn_vitdet_h_75ep.py  utils.py  vis_utils.py
apps/ai/tools/: utils.py
apps/server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  moon.yml
apps/server/.sqlx/: query-009e7f217b7b76f7cc9b709648cd51a3a77a4984844bddddeb6ccc92a0cfe868.json  query-558c68fae031acafea6311623bed52277e03c260fc61ac087c57081af7cef9e6.json  query-62de7acb8f04698a0110718e40968695d6f5e10f91b11e1328ca4c65cb471c40.json
apps/server/cmd/server/: main.go
apps/server/cmd/test/: main.go
apps/server/internal/app/: app.go
apps/server/internal/model/: analysis.go  auth.go  error.go  jwt.go  outbound.go  role.go  user.go  video.go
apps/server/internal/outbound/minio/: getter.go  minio.go  upload.go
apps/server/internal/outbound/postgres/: analysis.go  auth.go  postgres.go  transaction.go  user.go  video.go
apps/server/internal/outbound/rabbitmq/: analysis.go  rabbitmq.go
apps/server/internal/service/: analyse.go  analysis.go  auth.go  jwt.go  session.go  user.go  video.go
apps/server/internal/setup/config/: config.go  config_test.go
apps/server/internal/setup/logger/: logger.go
apps/server/migrations/: .000004_add_clean_expired_sessions.down.sql  .000004_add_clean_expired_sessions.up.sql  000001_create_users_table.up.sql  000002_add_updated_at_trigger.up.sql  000003_create_sessions_table.down.sql  000003_create_sessions_table.up.sql  000004_create_videos_table.down.sql  000004_create_videos_table.up.sql  000005_drop_updated_at_column_sessions.down.sql  000005_drop_updated_at_column_sessions.up.sql  000006_create_analyses_table.up.sql  000006_create_analysis_table.down.sql  000007_add_bucket_videos_table.down.sql  000007_add_bucket_videos_table.up.sql  000008_add_clean_expired_sessions.up.sql  000009_add_clean_expired_upload.down.sql  000009_add_clean_expired_upload.up.sql  20260303132858_create_users_table.sql  20260307000001_create_videos_table.sql  20260307000002_create_analyses_table.sql  20260311000001_add_progress_to_analyses.sql  20260312000001_add_hints_to_analyses.sql
apps/server/postgres/: Dockerfile  init-pg-cron.sh
apps/server/src/: config.rs  main.rs  outbound.rs  usecase.rs
apps/server/src/domain/: user.rs
apps/server/src/domain/analysis/: models.rs  ports.rs
apps/server/src/domain/auth/: entity.rs  error.rs  inbound.rs
apps/server/src/domain/user/: entity.rs  error.rs  inbound.rs  outbound.rs  ports.rs  service.rs
apps/server/src/domain/video/: models.rs  ports.rs
apps/server/src/inbound/: http.rs
apps/server/src/inbound/http/: handlers.rs
apps/server/src/outbound/: minio.rs  postgresql.rs  postgresql_analysis.rs  rabbitmq.rs
apps/server/src/tests/: mod.rs
apps/server/src/usecase/: analysis.rs  auth.rs  user.rs  video.rs
(+407 files in other folders)
