[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ascension-ai"
version = "1.0.0"
description = "AI component for Ascension EIP"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
ascension-worker = "consumer:main"

[tool.setuptools]
py-modules = ["consumer", "main", "pose_analysis"]

[tool.ruff]
exclude = ["venv"]

[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'
