[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ascension-ai"
version = "1.0.0"
description = "AI component for Ascension EIP"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
ascension-worker = "consumer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [
    ".git",
    "ai-env",
    "venv",
    "dist",
    "build",
]

[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'
force-exclude = '''
/(
    ai-env
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
