[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ascension-ai"
version = "1.0.0"
description = "AI component for Ascension EIP"
requires-python = ">=3.11"
dependencies = [
    "black>=23.3.0,<27",
    "boto3>=1.34,<2",
    "matplotlib==3.10.8",
    "mediapipe==0.10.32",
    "numpy==2.4.4",
    "opencv-contrib-python==4.13.0.92",
    "opencv-python==4.13.0.92",
    "pika>=1.3,<2",
    "psycopg2-binary>=2.9,<3",
    "python-dotenv>=1.0,<2",
    "google-generativeai>=0.8,<1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
ascension-worker = "worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [
    ".git",
    "ai-env",
    "venv",
    "dist",
    "build",
]

[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'
force-exclude = '''
/(
    ai-env
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
