[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
#http
axum = { version = "0.8", features = ["macros", "http2", "multipart", "ws"] }
tower = { version = "0.5", features = ["full"]}

#db
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "macros" ] }

# async
tokio = { version = "1.49", features = ["full"] }

# config
dotenv = "0.15"

# serialization
serde = { version = "1.0", features = ["derive"] }

#minio
minio = "0.3"
openssl = { version = "0.10", features = ["vendored"] }

# tools
uuid = { version = "1.22", features = ["v4", "fast-rng"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
derive_more = { version = "2.1", features = ["full"] }
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "10.3.0"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1.49", features = ["full", "test-util"] }
